--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -8,8 +8,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 320px;
-    height: 200px;
+    min-width: 320px;
+    min-height: 200px;
     position: relative;
 }
 
@@ -19,23 +19,22 @@
 
 @media screen and (min-width: 768px) {
     .cover {
-        width: 768px;
-        height: 480px;
+        min-width: 768px;
+        min-height: 480px;
     }
 }
 
 @media screen and (min-width: 1024px) {
     .cover {
-        width: 1024px;
-        height: 640px;
+        min-width: 1024px;
+        min-height: 640px;
     }
 }
 
 @media screen and (min-width: 1280px) {
     .cover {
-        width: 1184px;
-        height: 740px;
+        min-width: 1184px;
+        min-height: 740px;
         margin-top: 12px;
-        padding: 0 48px;
     }
 }
