--- a/blocks/footer/__copyright/__copyright.css
+++ b/blocks/footer/__copyright/__copyright.css
@@ -1,6 +1,6 @@
 .footer__copyright {
     width: 100%;
-    height: 14px;
+    min-height: 14px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: normal;
@@ -12,7 +12,7 @@
 @media screen and (min-width: 768px) {
     .footer__copyright {
         width: 186px;
-        height: 16px;
+        min-height: 16px;
         line-height: 16px;
         text-align: right;
         margin: 0;
