--- a/blocks/footer/__link/__link.css
+++ b/blocks/footer/__link/__link.css
@@ -1,6 +1,6 @@
 .footer__link {
     width: 100%;
-    height: 24px;
+    min-height: 24px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: normal;
@@ -20,7 +20,7 @@
 @media screen and (min-width: 768px) {
     .footer__link {
         width: 100%;
-        height: 18px;
+        min-height: 18px;
         font-size: 16px;
         line-height: 18px;
         padding: 0;
