--- a/blocks/header/__lang-link/__lang-link.css
+++ b/blocks/header/__lang-link/__lang-link.css
@@ -1,6 +1,6 @@
 .header__lang-link {
     width: 22px;
-    height: 24px;
+    min-height: 24px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: normal;
@@ -25,7 +25,7 @@
 @media screen and (min-width: 768px) {
     .header__lang-link {
         width: 30px;
-        height: 28px;
+        min-height: 28px;
         font-size: 24px;
         line-height: 28px;
         padding-top: 18px;
