--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -28,7 +28,7 @@
 
 @media screen and (min-width: 1280px) {
     .header {
-        width: 1184px;
+        width: 95%;
         grid-template-columns: 92% 4% 4%;
     }
 }
