--- a/blocks/intro/__text/__text.css
+++ b/blocks/intro/__text/__text.css
@@ -1,6 +1,6 @@
 .intro__text {
     min-width: 288px;
-    height: 520px;
+    min-height: 520px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: normal;
@@ -14,7 +14,7 @@
 @media screen and (min-width: 768px) {
     .intro__text {
         width: 720px;
-        height: 208px;
+        min-height: 208px;
         padding: 0 24px;
     }
 }
