--- a/blocks/lead/__subtitle/__subtitle.css
+++ b/blocks/lead/__subtitle/__subtitle.css
@@ -14,7 +14,7 @@
 
 @media screen and (min-width: 768px) {
     .lead__subtitle {
-        width: 640px;
+        min-width: 640px;
         height: 72px;
         font-size: 30px;
         line-height: 36px;
