--- a/blocks/lead/__title/__title.css
+++ b/blocks/lead/__title/__title.css
@@ -14,7 +14,7 @@
 
 @media screen and (min-width: 768px) {
     .lead__title {
-        width: 720px;
+        min-width: 720px;
         height: 200px;
         font-size: 96px;
         line-height: 100px;
