--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -12,21 +12,21 @@
 
 @media screen and (min-width: 768px) {
     .lead {
-        width: 768px;
-        height: 862px;
+        min-width: 768px;
+        min-height: 862px;
     }
 }
 
 @media screen and (min-width: 1024px) {
     .lead {
-        width: 928px;
-        height: 962px;
+        min-width: 928px;
+        min-height: 962px;
     }
 }
 
 @media screen and (min-width: 1280px) {
     .lead {
-        width: 984px;
-        height: 1005px;
+        min-width: 984px;
+        min-height: 1005px;
     }
 }
