--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,3 +1,11 @@
+@import url('./__image/__image.css');
+@import url('./__paragraph/__paragraph.css');
+@import url('./__paragraph/__paragraph-bottom/__paragraph-bottom.css');
+@import url('./__title/__title.css');
+@import url('./__website/__website.css');
+@import url('./__website/__link/__link.css');
+@import url('./__website/__url-heading/__url-heading.css');
+
 .place {
     width: 100%;
 }
