--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,34 +1,27 @@
 @import url('./__logo/__logo.css');
+@import url('./__lang-links/__lang-links.css');
 @import url('./__lang-link/__lang-link.css');
 
 .header {
-    display: grid;
-    grid-template-columns: 80% 10% 10%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
     min-width: 288px;
     min-height: 42px;
     padding: 16px 16px 48px;
+    background: #2a2c2f;
 }
 
 @media screen and (min-width: 768px) {
     .header {
-        min-width: 720px;
         min-height: 52px;
-        grid-template-columns: 88% 6% 6%;
         padding: 28px 28px 48px;
     }
 }
 
 @media screen and (min-width: 1024px) {
     .header {
-        width: 928px;
-        grid-template-columns: 90% 5% 5%;
         padding: 28px 48px 48px;
-    }
-}
-
-@media screen and (min-width: 1280px) {
-    .header {
-        width: 95%;
-        grid-template-columns: 92% 4% 4%;
     }
 }
