--- a/blocks/cover/__subtitle/__subtitle.css
+++ b/blocks/cover/__subtitle/__subtitle.css
@@ -1,7 +1,7 @@
 .cover__subtitle {
-    min-width: 288px;
-    min-height: 48px;
-    font-family: 'Inter';
+    min-width: 90%;
+    margin: 0 auto;
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
@@ -14,7 +14,6 @@
 @media screen and (min-width: 768px) {
     .cover__subtitle {
         width: 360px;
-        height: 66px;
         font-size: 18px;
         line-height: 22px;
     }
