--- a/blocks/cover/__title/__title.css
+++ b/blocks/cover/__title/__title.css
@@ -1,20 +1,21 @@
 .cover__title {
-    min-width: 288px;
-    min-height: 70px;
-    font-family: 'Inter';
+    width: 90%;
+    margin: 0 auto 16px;
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 32px;
     line-height: 35px;
     text-align: center;
+    text-decoration: none;
     color: #ffffff;
     z-index: 3;
 }
 
 @media screen and (min-width: 768px) {
     .cover__title {
+        margin-bottom: 32px;
         width: 560px;
-        height: 152px;
         font-size: 72px;
         line-height: 76px;
     }
