--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -11,6 +11,7 @@
     min-width: 320px;
     min-height: 200px;
     position: relative;
+    margin-top: 40px;
 }
 
 .cover:hover .cover__background::before {
@@ -19,22 +20,19 @@
 
 @media screen and (min-width: 768px) {
     .cover {
-        min-width: 768px;
         min-height: 480px;
     }
 }
 
 @media screen and (min-width: 1024px) {
     .cover {
-        min-width: 1024px;
         min-height: 640px;
     }
 }
 
 @media screen and (min-width: 1280px) {
     .cover {
-        min-width: 1184px;
         min-height: 740px;
-        margin-top: 12px;
+        margin: 0 48px;
     }
 }
