--- a/blocks/footer/__link/__link.css
+++ b/blocks/footer/__link/__link.css
@@ -1,7 +1,7 @@
 .footer__link {
     width: 100%;
     min-height: 24px;
-    font-family: 'Inter';
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
