--- a/blocks/header/__lang-link/__lang-link.css
+++ b/blocks/header/__lang-link/__lang-link.css
@@ -1,31 +1,26 @@
 .header__lang-link {
     width: 22px;
-    min-height: 24px;
-    font-family: 'Inter';
+    font-family: 'Inter' Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
     line-height: 24px;
-    text-align: right;
-    text-decoration-line: underline;
+    margin-left: 18px;
     color: #ffffff;
-    padding-top: 14px;
+    text-decoration: none;
+    text-align: right;
 }
 
 .header__lang-link:hover {
     color: rgb(132, 138, 132);
     transition: color .2s linear .2s;
     opacity: .5;
-}
-
-.header__lang-link:nth-of-type(2n) {
-    text-decoration: none;
+    text-decoration-line: underline;
 }
 
 @media screen and (min-width: 768px) {
     .header__lang-link {
         width: 30px;
-        min-height: 28px;
         font-size: 24px;
         line-height: 28px;
         padding-top: 18px;
