--- a/blocks/intro/__list/__list.css
+++ b/blocks/intro/__list/__list.css
@@ -1,20 +1,18 @@
 .intro__list {
     min-width: 288px;
-    min-height: 90px;
-    font-family: 'Inter';
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
-    font-weight: bold;
     font-size: 12px;
     line-height: 18px;
     color: #ffffff;
     list-style: none;
     margin: 0;
     padding: 32px 16px 0;
+    font-variant-numeric: normal;
 }
 
 @media screen and (min-width: 768px) {
     .intro__list {
-        width: 720px;
         padding: 32px 24px 0;
     }
 }
