--- a/blocks/intro/__text/__text.css
+++ b/blocks/intro/__text/__text.css
@@ -1,7 +1,6 @@
 .intro__text {
     min-width: 288px;
-    min-height: 520px;
-    font-family: 'Inter';
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
@@ -13,8 +12,6 @@
 
 @media screen and (min-width: 768px) {
     .intro__text {
-        width: 720px;
-        min-height: 208px;
         padding: 0 24px;
     }
 }
