--- a/blocks/intro/__title/__title.css
+++ b/blocks/intro/__title/__title.css
@@ -1,7 +1,6 @@
 .intro__title {
     min-width: 288px;
-    min-height: 70px;
-    font-family: 'Inter';
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 32px;
@@ -13,7 +12,6 @@
 
 @media screen and (min-width: 768px) {
     .intro__title {
-        width: 720px;
         height: 58px;
         font-size: 54px;
         line-height: 58px;
