--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,6 +1,7 @@
 @import url('./__title/__title.css');
 @import url('./__text/__text.css');
 @import url('./__list/__list.css');
+@import url('./__list/__list-span/__list-span.css');
 
 .intro {
     min-width: 288px;
@@ -8,13 +9,13 @@
 
 @media screen and (min-width: 768px) {
     .intro {
-        width: 720px;
+        min-width: 720px;
     }
 }
 
 @media screen and (min-width: 1024px) {
     .intro {
-        width: 690px;
+        min-width: 690px;
         padding-left: 48px;
     }
 }
