--- a/blocks/lead/__caption/__caption.css
+++ b/blocks/lead/__caption/__caption.css
@@ -1,7 +1,6 @@
 .lead__caption {
     width: 159px;
-    min-height: 14px;
-    font-family: 'Inter';
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 10px;
@@ -15,7 +14,7 @@
 
 @media screen and (min-width: 768px) {
     .lead__caption {
-        padding: 8px 0 24px;
+        padding: 8px 0 0 24px;
     }
 }
 
