--- a/blocks/lead/__image/__image.css
+++ b/blocks/lead/__image/__image.css
@@ -1,17 +1,17 @@
 .lead__image {
-    height: 200px;
+    max-width: 100%;
+    height: auto;
     object-fit: fill;
 }
 
 @media screen and (min-width: 768px) {
     .lead__image {
-        height: 480px;
+        height: auto;
     }
 }
 
 @media screen and (min-width: 1024px) {
     .lead__image {
-        height: 580px;
         padding: 0 48px;
     }
 }
