--- a/blocks/lead/__subtitle/__subtitle.css
+++ b/blocks/lead/__subtitle/__subtitle.css
@@ -1,7 +1,6 @@
 .lead__subtitle {
     min-width: 288px;
-    min-height: 40px;
-    font-family: 'Inter';
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
@@ -14,8 +13,6 @@
 
 @media screen and (min-width: 768px) {
     .lead__subtitle {
-        min-width: 640px;
-        height: 72px;
         font-size: 30px;
         line-height: 36px;
         padding: 0 64px 56px;
