--- a/blocks/lead/__title/__title.css
+++ b/blocks/lead/__title/__title.css
@@ -1,7 +1,6 @@
 .lead__title {
     min-width: 288px;
-    min-height: 88px;
-    font-family: 'Inter';
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 40px;
@@ -14,8 +13,6 @@
 
 @media screen and (min-width: 768px) {
     .lead__title {
-        min-width: 720px;
-        height: 200px;
         font-size: 96px;
         line-height: 100px;
         padding: 0 24px 32px;
