--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -2,15 +2,15 @@
 
 .photo-grid {
     display: grid;
-    grid-template-rows: repeat(12, 1fr);
+    grid-template-rows: repeat(12, minmax(min-content, max-content));
     grid-gap: 12px;
     padding: 64px 16px;
 }
 
 @media screen and (min-width: 768px) {
     .photo-grid {
-        grid-template-columns: repeat(2, 2fr);
-        grid-template-rows: repeat(6, 2fr);
+        grid-template-columns: repeat(2, minmax(min-content, max-content));
+        grid-template-rows: repeat(6, minmax(min-content, max-content));
         grid-gap: 16px;
         padding: 88px 24px;
     }
@@ -18,8 +18,8 @@
 
 @media screen and (min-width: 1024px) {
     .photo-grid {
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(4, 1fr);
+        grid-template-columns: repeat(3, minmax(min-content, max-content));
+        grid-template-rows: repeat(4, minmax(min-content, max-content));
         grid-gap: 14px 14px;
         padding: 92px 48px;
     }
@@ -27,7 +27,7 @@
 
 @media screen and (min-width: 1280px) {
     .photo-grid {
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(3, 1fr);
+        grid-template-columns: repeat(4, minmax(min-content, max-content));
+        grid-template-rows: repeat(3, minmax(min-content, max-content));
     }
 }
