--- a/blocks/place/__link/__link.css
+++ b/blocks/place/__link/__link.css
@@ -1,8 +1,8 @@
 @media screen and (min-width: 768px) {
-    .website__link {
+    .place__link {
         width: 352px;
         height: 22px;
-        font-family: 'Inter';
+        font-family: 'Inter', Arial, sans-serif;
         font-style: normal;
         font-weight: normal;
         font-size: 18px;
@@ -10,7 +10,7 @@
         text-decoration-line: underline;
         color: #FFFFFF;
     }
-    .website__link:hover {
+    .place__link:hover {
         color: rgb(132, 138, 132);
         transition: color .2s linear .2s;
         opacity: .5;
@@ -18,7 +18,7 @@
 }
 
 @media screen and (min-width: 1024px) {
-    .website__link {
+    .place__link {
         width: 456px;
     }
 }
