--- a/blocks/place/__paragraph/__paragraph.css
+++ b/blocks/place/__paragraph/__paragraph.css
@@ -1,20 +1,25 @@
 .place__paragraph {
     width: 288px;
-    font-family: 'Inter';
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
     line-height: 26px;
     color: #ffffff;
-    margin: 0;
+    margin-top: 0;
     padding: 0 16px 24px;
+}
+
+.place__paragraph:last-child {
+    margin-bottom: 0;
 }
 
 @media screen and (min-width: 768px) {
     .place__paragraph {
         width: 352px;
+        margin-top: 0;
+        margin-bottom: 24px;
         padding: 0;
-        grid-area: paragraph;
     }
 }
 
