--- a/blocks/place/__title/__title.css
+++ b/blocks/place/__title/__title.css
@@ -1,6 +1,6 @@
 .place__title {
     min-width: 288px;
-    font-family: 'Inter';
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: 900;
     font-size: 32px;
