--- a/blocks/place/__url-heading/__url-heading.css
+++ b/blocks/place/__url-heading/__url-heading.css
@@ -1,8 +1,8 @@
 @media screen and (min-width: 768px) {
-    .website__url-heading {
+    .place__url-heading {
         width: 352px;
         height: 12px;
-        font-family: 'Inter';
+        font-family: 'Inter', Arial, sans-serif;
         font-style: normal;
         font-weight: normal;
         font-size: 12px;
@@ -15,7 +15,7 @@
 }
 
 @media screen and (min-width: 1024px) {
-    .website__url-heading {
+    .place__url-heading {
         width: 456px;
     }
 }
