--- a/blocks/header/__lang-link/__lang-link.css
+++ b/blocks/header/__lang-link/__lang-link.css
@@ -1,6 +1,6 @@
 .header__lang-link {
     width: 22px;
-    font-family: 'Inter' Arial, sans-serif;
+    font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 18px;
@@ -16,6 +16,10 @@
     transition: color .2s linear .2s;
     opacity: .5;
     text-decoration-line: underline;
+}
+
+.header__lang-link:active {
+    color: rgb(197, 18, 18);
 }
 
 @media screen and (min-width: 768px) {
