--- a/blocks/cover/__subtitle/__subtitle.css
+++ b/blocks/cover/__subtitle/__subtitle.css
@@ -1,5 +1,5 @@
 .cover__subtitle {
-    min-width: 90%;
+    width: 288px;
     margin: 0 auto;
     font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
