--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,27 +1,7 @@
+@import url('./__navigation/__navigation.css');
 @import url('./__link/__link.css');
 @import url('./__copyright/__copyright.css');
 
 .footer {
-    display: flex;
-    flex-direction: column;
-    min-width: 186px;
-    height: 310px;
-    padding: 64px 118px 24px 16px;
     background: #2a2c2f;
-}
-
-@media screen and (min-width: 768px) {
-    .footer {
-        display: grid;
-        grid-template-columns: repeat(5, minmax(min-content, max-content)) 1fr;
-        grid-gap: 18px;
-        height: 18px;
-        padding: 88px 24px 24px;
-    }
-}
-
-@media screen and (min-width: 1024px) {
-    .footer {
-        padding: 92px 48px 24px;
-    }
 }
