--- a/blocks/lead/__caption/__caption.css
+++ b/blocks/lead/__caption/__caption.css
@@ -8,24 +8,19 @@
     letter-spacing: 0.15em;
     text-transform: uppercase;
     color: #ffffff;
-    padding: 8px 0 0 16px;
+    padding-top: 8px;
+    padding-left: 16px;
     margin: 0;
 }
 
 @media screen and (min-width: 768px) {
     .lead__caption {
-        padding: 8px 0 0 24px;
+        padding-left: 24px;
     }
 }
 
 @media screen and (min-width: 1024px) {
     .lead__caption {
-        padding-left: 48px;
-    }
-}
-
-@media screen and (min-width: 1280px) {
-    .lead__caption {
-        padding-left: 148px;
+        padding-left: 0;
     }
 }
