--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,5 +1,6 @@
 @import url('./__title/__title.css');
 @import url('./__subtitle/__subtitle.css');
+@import url('./__figure/__figure.css');
 @import url('./__image/__image.css');
 @import url('./__caption/__caption.css');
 
