--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,7 +1,7 @@
-@import url('./__title/__title.css');
-@import url('./__subtitle/__subtitle.css');
-@import url('./__background/__background.css');
-@import url('./__overlay/__overlay.css');
+@import url('./__title/cover__title.css');
+@import url('./__subtitle/cover__subtitle.css');
+@import url('./__background/cover__background.css');
+@import url('./__overlay/cover__overlay.css');
 
 .cover {
     display: flex;
