--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,21 +1,24 @@
 .footer__copyright {
-    width: 100%;
-    min-height: 14px;
     font-family: 'Inter', Arial, sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
     line-height: 14px;
     color: #ffffff;
+    margin: 0;
+    padding: 48px 0 24px 16px;
 }
 
 @media screen and (min-width: 768px) {
     .footer__copyright {
-        width: 186px;
-        min-height: 16px;
         line-height: 16px;
         text-align: right;
-        margin: 0;
-        justify-self: end;
+        padding: 88px 48px 24px 0;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .footer__copyright {
+        padding-top: 92px;
     }
 }
