--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,7 +1,7 @@
-@import url('./__title/__title.css');
-@import url('./__text/__text.css');
-@import url('./__list/__list.css');
-@import url('./__list/__list-span/__list-span.css');
+@import url('./__title/intro__title.css');
+@import url('./__text/intro__text.css');
+@import url('./__list/intro__list.css');
+@import url('./__list-span/intro__list-span.css');
 
 .intro {
     min-width: 288px;
