--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,8 +1,8 @@
-@import url('./__title/__title.css');
-@import url('./__subtitle/__subtitle.css');
-@import url('./__figure/__figure.css');
-@import url('./__image/__image.css');
-@import url('./__caption/__caption.css');
+@import url('./__title/lead__title.css');
+@import url('./__subtitle/lead__subtitle.css');
+@import url('./__figure/lead__figure.css');
+@import url('./__image/lead__image.css');
+@import url('./__caption/lead__caption.css');
 
 .lead {
     display: flex;
