--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,13 +1,13 @@
 @media screen and (min-width: 768px) {
     .place__url-heading {
         width: 352px;
-        height: 12px;
         font-family: 'Inter', Arial, sans-serif;
         font-style: normal;
         font-weight: normal;
         font-size: 12px;
         line-height: 12px;
         letter-spacing: 0.2em;
+        text-transform: uppercase;
         color: #AAAAAA;
         margin: 0;
         padding-bottom: 12px;
