--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,10 +1,10 @@
-@import url('./__image/__image.css');
-@import url('./__paragraphs/__paragraphs.css');
-@import url('./__paragraph/__paragraph.css');
-@import url('./__title/__title.css');
-@import url('./__website/__website.css');
-@import url('./__link/__link.css');
-@import url('./__url-heading/__url-heading.css');
+@import url('./__image/place__image.css');
+@import url('./__paragraphs/place__paragraphs.css');
+@import url('./__paragraph/place__paragraph.css');
+@import url('./__title/place__title.css');
+@import url('./__website/place__website.css');
+@import url('./__link/place__link.css');
+@import url('./__url-heading/place__url-heading.css');
 
 .place {
     width: 90%;
@@ -32,6 +32,6 @@
 
 @media screen and (min-width: 1280px) {
     .place {
-        padding: 0 148px 80px;
+        padding: 0 0 148px 80px;
     }
 }
