--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -6,7 +6,7 @@
     font-size: 16px;
     line-height: 26px;
     color: #ffffff;
-    margin-top: 0;
+    margin: 0 auto;
     padding: 0 16px 24px;
 }
 
