--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -6,10 +6,6 @@
 @import url('./__link/place__link.css');
 @import url('./__url-heading/place__url-heading.css');
 
-.place {
-    width: 90%;
-}
-
 @media screen and (min-width: 768px) {
     .place {
         display: grid;
@@ -20,18 +16,12 @@
         "image paragraph"
         "image paragraph";
         grid-gap: 28px 24px;
-        padding: 0 24px 72px;
+        padding-bottom: 72px;
     }
 }
 
 @media screen and (min-width: 1024px) {
     .place {
-        padding: 0 48px 80px;
-    }
-}
-
-@media screen and (min-width: 1280px) {
-    .place {
-        padding: 0 0 148px 80px;
+        padding-bottom: 80px;
     }
 }
