--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -6,6 +6,14 @@
 @import url('./__link/place__link.css');
 @import url('./__url-heading/place__url-heading.css');
 
+.place {
+    padding-bottom: 48px;
+}
+
+.place:last-of-type {
+    padding-bottom: 64px;
+}
+
 @media screen and (min-width: 768px) {
     .place {
         display: grid;
@@ -18,10 +26,18 @@
         grid-gap: 28px 24px;
         padding-bottom: 72px;
     }
+
+    .place:last-of-type {
+        padding-bottom: 88px;
+    }
 }
 
 @media screen and (min-width: 1024px) {
     .place {
         padding-bottom: 80px;
+    }
+
+    .place:last-of-type {
+        padding-bottom: 92px;
     }
 }
